# linear_regression

./: linear_regression.ipynb  prepare_data.ipynb  pyproject.toml
raw/: googl_returns.parquet  googl_returns_2021.parquet  sp500_returns_2021.parquet
schemas/: log_returns.py
utils/: loaders.py
