[project]
name = "linear-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.139.2",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandera[pandas]>=0.26.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "seaborn>=0.13.2",
    "ty>=0.0.1a21",
]
